Loading Screen Added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="cursor-follower"></div>
 
     <!-- Loading Screen -->
-    <!-- <div class="loading-screen">
+    <div class="loading-screen">
         <div class="loading-content">
             <div class="loading-text">
                 <span>A</span><span>R</span><span>U</span><span>N</span>
@@ -22,7 +22,7 @@
                 <div class="loading-progress"></div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- Navigation -->
     <nav class="nav">
