--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="nav-menu">
             <a href="#home" class="nav-link" data-text="HOME">HOME</a>
             <a href="#about" class="nav-link" data-text="ABOUT">ABOUT</a>
+            <a href="#experience" class="nav-link" data-text="EXPERIENCE">EXPERIENCE</a>
             <a href="#work" class="nav-link" data-text="WORK">WORK</a>
             <a href="#contact" class="nav-link" data-text="CONTACT">CONTACT</a>
             
@@ -171,6 +172,84 @@
         </div>
     </section>
 
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="experience-container">
+            <div class="experience-header">
+                <h2 class="section-title">
+                    <span class="title-line">PROFESSIONAL</span>
+                    <span class="title-line">EXPERIENCE</span>
+                </h2>
+            </div>
+            
+            <div class="timeline-container">
+                <div class="experience-item" data-bg="#8b5cf6">
+                    <div class="experience-content">
+                        <div class="experience-info">
+                            <div class="experience-meta">
+                                <span class="experience-duration">May 2025 - July 2025</span>
+                                <span class="experience-type">Internship</span>
+                            </div>
+                            <h3 class="experience-title">Deep Learning Intern</h3>
+                            <h4 class="experience-company">Indira Gandhi Centre for Atomic Research</h4>
+                            <div class="experience-description">
+                                <ul>
+                                    <li>Researching the application of conceptAttention in camouflage object detection tasks</li>
+                                </ul>
+                            </div>
+                            <div class="experience-skills">
+                                <span>#Python</span>
+                                <span>#PyTorch</span>
+                                <span>#Diffusion Models</span>
+                                <span>#Attention</span>
+                            </div>
+                        </div>
+                        <div class="experience-visual">
+                            <div class="experience-icon">
+                                <div class="icon-bg gradient-2"></div>
+                                <span class="icon-text">WEB</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="experience-item" data-bg="#6366f1">
+                    <div class="experience-content">
+                        <div class="experience-info">
+                            <div class="experience-meta">
+                                <span class="experience-duration">May 2024 - June 2024</span>
+                                <span class="experience-type">Internship</span>
+                            </div>
+                            <h3 class="experience-title">Machine Learning Intern</h3>
+                            <h4 class="experience-company">Indira Gandhi Centre for Atomic Research</h4>
+                            <div class="experience-description">
+                                <ul>
+                                    <li>Built a robust CNN-OCR pipeline for accurate license plate detection under 
+                                        varying conditions, integrated with
+                                        TinyDB for lightweight and efficient local data storage.
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="experience-skills">
+                                <span>#Python</span>
+                                <span>#Tensorflow</span>
+                                <span>#Computer Vision</span>
+                                <span>#CNN</span>
+                            </div>
+                        </div>
+                        <div class="experience-visual">
+                            <div class="experience-icon">
+                                <div class="icon-bg gradient-1"></div>
+                                <span class="icon-text">ML</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Work Section -->
     <section id="work" class="work">
         <div class="work-header">
@@ -187,10 +266,15 @@
                         <div class="project-meta">
                             <span class="project-year">2025</span>
                             <span class="project-type">Deep Learning</span>
+                            <a href="https://github.com/yourusername/camouflage-detection" target="_blank" class="github-link">
+                                <svg class="github-icon" viewBox="0 0 16 16" fill="currentColor">
+                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                                </svg>
+                            </a>
                         </div>
                         <h3 class="project-title">Camouflage Object Detection</h3>
                         <p class="project-description">Experimenting with ConceptAttention techniques to enhance detection 
-                            and analysis in camouflaged image recognition tasks, pushing the boundaries of visual AI applications. Credits to Alec Helbling and others</p>
+                            and analysis in camouflaged image recognition tasks, pushing the boundaries of visual AI applications.</p>
                         <div class="project-tags">
                             <span>#Deep Learning</span>
                             <span>#Diffusion Models</span>
@@ -200,13 +284,13 @@
                     </div>
                     <div class="project-visual">
                         <div class="project-image">
-                            <div class="image-overlay">
-                                <img src="assets/COD.png" alt="">
-                            </div>
+                            <img src="assets/COD.png" alt="">
                         </div>
                     </div>
+
                 </div>
             </div>
+
 
             <div class="project-item" data-bg="#8b5cf6">
                 <div class="project-content">
@@ -214,6 +298,11 @@
                         <div class="project-meta">
                             <span class="project-year">2025</span>
                             <span class="project-type">Machine Learning</span>
+                                <a href="https://github.com/yourusername/camouflage-detection" target="_blank" class="github-link">
+                                <svg class="github-icon" viewBox="0 0 16 16" fill="currentColor">
+                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                                </svg>
+                            </a>
                         </div>
                         <h3 class="project-title">PaveSense: Pothole Detection</h3>
                         <p class="project-description">A smart solution that detects potholes using mobile 
@@ -226,7 +315,7 @@
                         </div>
                     </div>
                     <div class="project-visual">
-                        <div class="project-image project-image-2">
+                        <div class="project-image">
                             <div class="image-overlay">
                                 <img src="assets/PaveSense.png" alt="">
                             </div>
@@ -241,6 +330,11 @@
                         <div class="project-meta">
                             <span class="project-year">2025</span>
                             <span class="project-type">Reinforcement Learning</span>
+                                <a href="https://github.com/yourusername/camouflage-detection" target="_blank" class="github-link">
+                                <svg class="github-icon" viewBox="0 0 16 16" fill="currentColor">
+                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                                </svg>
+                            </a>
                         </div>
                         <h3 class="project-title">BumpAlert: Precision AI for speed breaker detection and navigation</h3>
                         <p class="project-description">AI-powered system trained to recognize and navigate speed breakers, enhancing autonomous driving safety and precision.</p>
@@ -251,10 +345,8 @@
                         </div>
                     </div>
                     <div class="project-visual">
-                        <div class="project-image project-image-3">
-                            <div class="image-overlay">
-                                <img src="assets/BumpAlert.png" alt="">
-                            </div>
+                        <div class="project-image">
+                                <img src="assets/BumpAlert.png" alt="" >
                         </div>
                     </div>
                 </div>
